@@ -1,34 +1,42 @@
 package earth.terrarium.spirit.api.storage.util;
 
-import com.google.common.collect.Lists;
 import com.mojang.datafixers.util.Either;
 import com.mojang.serialization.Codec;
-import com.mojang.serialization.codecs.RecordCodecBuilder;
+import com.teamresourceful.resourcefullib.common.codecs.tags.HolderSetCodec;
 import earth.terrarium.spirit.api.utils.SoulStack;
 import net.minecraft.core.Holder;
+import net.minecraft.core.HolderSet;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.entity.EntityType;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class SoulIngredient implements Predicate<SoulStack> {
-    public static final Codec<SoulIngredient> CODEC = Codec.either(EntityValue.CODEC, TagValue.CODEC)
-            .listOf()
-            .xmap(SoulIngredient::new, SoulIngredient::getRawValues);
 
-    private final List<Either<EntityValue, TagValue>> values;
-    private List<SoulStack> soulStacks;
+    public static final Codec<SoulIngredient> CODEC = Codec.either(HolderSetCodec.of(BuiltInRegistries.ENTITY_TYPE), HolderSetCodec.of(BuiltInRegistries.ENTITY_TYPE).listOf())
+            .xmap(
+                    either -> either.map(SoulIngredient::new, SoulIngredient::new),
+                    soulIngredient -> soulIngredient.sets.size() == 1 ? Either.left(soulIngredient.sets.get(0)) : Either.right(soulIngredient.sets)
+            );
 
-    private SoulIngredient(List<Either<EntityValue, TagValue>> stream) {
-        this.values = stream;
+    private final List<HolderSet<EntityType<?>>> sets;
+    private List<SoulStack> stacks;
+
+    private SoulIngredient(List<HolderSet<EntityType<?>>> sets) {
+        this.sets = sets;
+    }
+
+    private SoulIngredient(HolderSet<EntityType<?>> set) {
+        this(List.of(set));
     }
 
     public static SoulIngredient of() {
-        return new SoulIngredient(List.of());
+        return new SoulIngredient(HolderSet.direct());
     }
 
     public static SoulIngredient of(EntityType<?>... entityTypes) {
@@ -39,78 +47,59 @@ public class SoulIngredient implements Predicate<SoulStack> {
         return SoulIngredient.of(Arrays.stream(soulStacks));
     }
 
-    public static SoulIngredient of(Stream<SoulStack> soulStackStream) {
-        List<Either<EntityValue, TagValue>> values = new ArrayList<>();
-        for (SoulStack soulStack : soulStackStream.filter(Predicate.not(SoulStack::isEmpty)).toList()) {
-            values.add(Either.left(new EntityValue(soulStack)));
-        }
-        return new SoulIngredient(values);
+    public static SoulIngredient of(Stream<SoulStack> stream) {
+        return new SoulIngredient(
+                HolderSet.direct(
+                        EntityType::builtInRegistryHolder,
+                        stream.filter(Predicate.not(SoulStack::isEmpty)).map(SoulStack::getEntity).toList()
+                )
+        );
     }
 
     public static SoulIngredient of(TagKey<EntityType<?>> tag) {
-        return new SoulIngredient(List.of(Either.right(new TagValue(tag))));
+        return BuiltInRegistries.ENTITY_TYPE.getTag(tag)
+                .map(SoulIngredient::new)
+                .orElseGet(SoulIngredient::of);
     }
 
     @Override
     public boolean test(SoulStack soulStack) {
-        if (this.values.isEmpty()) {
-            return soulStack.isEmpty();
-        } else {
-            for (SoulStack value : getSouls()) {
-                if (soulStack.getEntity().equals(value.getEntity())) {
-                    return true;
-                }
+        if (isEmpty() && soulStack.isEmpty()) {
+            return true;
+        }
+        return contains(soulStack.getEntity());
+    }
+
+    public boolean isEmpty() {
+        if (this.sets.size() == 0) {
+            return true;
+        }
+        return this.sets.stream().allMatch(set -> set.size() == 0);
+    }
+
+    public boolean contains(EntityType<?> entityType) {
+        for (HolderSet<EntityType<?>> set : this.sets) {
+            if (set.contains(entityType.builtInRegistryHolder())) {
+                return true;
             }
-            return false;
         }
+        return false;
     }
 
-    public List<SoulStack> getSouls() {
-        dissolve();
-        return soulStacks;
-    }
-
-    public void dissolve() {
-        if (this.soulStacks == null) {
-            this.soulStacks = this.values.stream().flatMap(either -> either.map(
-                    soulStack -> Stream.of(soulStack.soulStack()),
-                    tagValue -> tagValue.getSouls().stream()
-            )).collect(Collectors.toList());
+    public Collection<SoulStack> getStacks() {
+        if (stacks == null) {
+            stacks = sets.stream()
+                    .flatMap(HolderSet::stream)
+                    .filter(Holder::isBound)
+                    .map(Holder::value)
+                    .map(SoulStack::of)
+                    .filter(Predicate.not(SoulStack::isEmpty))
+                    .toList();
         }
+        return stacks;
     }
 
-    public List<Either<EntityValue, TagValue>> getRawValues() {
-        return values;
-    }
-
-    public interface Value {
-        Collection<SoulStack> getSouls();
-    }
-
-    public record EntityValue(SoulStack soulStack) implements Value {
-        private static final Codec<EntityValue> CODEC = SoulStack.CODEC.orElse(SoulStack.empty())
-                .xmap(EntityValue::new, EntityValue::soulStack);
-
-        @Override
-        public Collection<SoulStack> getSouls() {
-            return Collections.singleton(soulStack);
-        }
-    }
-
-    public record TagValue(TagKey<EntityType<?>> tag) implements Value {
-        public static final Codec<TagValue> CODEC = RecordCodecBuilder.create(instance -> instance.group(
-                TagKey.codec(BuiltInRegistries.ENTITY_TYPE.key()).fieldOf("tag").forGetter(TagValue::tag)
-        ).apply(instance, TagValue::new));
-
-        @Override
-        public Collection<SoulStack> getSouls() {
-            List<SoulStack> list = Lists.newArrayList();
-
-            for (Holder<EntityType<?>> holder : BuiltInRegistries.ENTITY_TYPE.getTagOrEmpty(this.tag)) {
-                list.add(new SoulStack(holder.value(), 1));
-            }
-
-            return list;
-        }
+    public Stream<EntityType<?>> getEntities() {
+        return getStacks().stream().map(SoulStack::getEntity);
     }
 }
